[gd_scene load_steps=4 format=3 uid="uid://dgrq2s80y7kki"]

[ext_resource type="FontFile" uid="uid://cruhb4r6t26q8" path="res://fonts/RUSTY ATTACK DEMO Regular.otf" id="1_6n4fa"]
[ext_resource type="Script" path="res://menu_ui.gd" id="1_nxtq1"]
[ext_resource type="FontFile" uid="uid://dql8tgl7gahfp" path="res://fonts/SpaceMono-Regular.ttf" id="2_7thel"]

[node name="MenuUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_nxtq1")

[node name="Control" type="Control" parent="."]
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
offset_right = 415.0
grow_vertical = 2

[node name="Label" type="Label" parent="Control"]
layout_mode = 2
offset_left = 32.0
offset_top = 38.0
offset_right = 431.0
offset_bottom = 98.0
size_flags_horizontal = 0
theme_override_fonts/font = ExtResource("1_6n4fa")
theme_override_font_sizes/font_size = 60
text = "Horror Game lol"

[node name="VBoxContainer" type="VBoxContainer" parent="Control"]
layout_mode = 2
anchor_bottom = 1.0
offset_left = 32.0
offset_top = 144.0
offset_right = 230.0
offset_bottom = -62.0
grow_vertical = 2
theme_override_constants/separation = 45

[node name="PlayButton" type="Button" parent="Control/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_7thel")
theme_override_font_sizes/font_size = 30
text = "Play"

[node name="OptionsButton" type="Button" parent="Control/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_7thel")
theme_override_font_sizes/font_size = 30
text = "Options"

[node name="QuitButton" type="Button" parent="Control/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_7thel")
theme_override_font_sizes/font_size = 30
text = "Quit"

[node name="Options" type="VBoxContainer" parent="Control"]
visible = false
layout_mode = 2
anchor_bottom = 1.0
offset_left = 32.0
offset_top = 144.0
offset_right = 230.0
offset_bottom = -62.0
grow_vertical = 2
theme_override_constants/separation = 45

[node name="ReturnButton" type="Button" parent="Control/Options"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_7thel")
theme_override_font_sizes/font_size = 30
text = "Return"

[node name="CheckButton" type="CheckButton" parent="Control/Options"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_7thel")
theme_override_font_sizes/font_size = 24
text = "Fullscreen"

[connection signal="pressed" from="Control/VBoxContainer/PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="Control/VBoxContainer/OptionsButton" to="." method="_on_options_button_pressed"]
[connection signal="pressed" from="Control/VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
[connection signal="pressed" from="Control/Options/ReturnButton" to="." method="_on_return_button_pressed"]
[connection signal="button_down" from="Control/Options/CheckButton" to="." method="_on_check_button_button_down"]
[connection signal="button_up" from="Control/Options/CheckButton" to="." method="_on_check_button_button_up"]
